--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+[![Travis Build Status](https://secure.travis-ci.org/balabit/libzorpll.svg?branch=6.0.6.0)](http://travis-ci.org/balabit/libzorpll)
+[![Coverity Scan Build Status](https://scan.coverity.com/projects/balabit-libzorpll/badge.svg)](https://scan.coverity.com/projects/balabit-libzorpll)
+
 Kzorp is a open source set of mechanisms to implement mixed packet filter/application level gateway functionality on Linux.
 Kzorp is used by Zorp, and anyone is welcome to use it with other gateways.
 
